# VapourSynth-DFTTest

./: GNUmakefile  Makefile.am  README.md  configure  configure.ac  meson.build
DFTTest/: DFTTest.cpp  DFTTest.h  DFTTest.hpp  DFTTest.vcxproj  DFTTest.vcxproj.filters  DFTTest_AVX2.cpp  DFTTest_AVX512.cpp  DFTTest_SSE2.cpp
DFTTest/VCL2/: vectorf128.h  vectorf256.h  vectorf512.h
DFTTest/vectorclass/: vectori128.h
